--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
+    "@react-native-firebase/app": "^12.9.3",
+    "@react-native-firebase/auth": "^12.9.3",
+    "@react-native-firebase/database": "^12.9.3",
+    "@react-native-firebase/firestore": "^12.9.3",
+    "@react-native-firebase/storage": "^12.9.3",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
