--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/database": "^12.9.3",
     "@react-native-firebase/firestore": "^12.9.3",
     "@react-native-firebase/storage": "^12.9.3",
+    "@react-native-google-signin/google-signin": "^7.0.1",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
