--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,8 @@ buildscript {
 
 allprojects {
     repositories {
+        jcenter()
+        
         mavenCentral()
         mavenLocal()
         maven {
@@ -35,5 +37,8 @@ allprojects {
 
         google()
         maven { url 'https://www.jitpack.io' }
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
 }
