--- a/ios/ChitChat/Info.plist
+++ b/ios/ChitChat/Info.plist
@@ -30,6 +30,19 @@
 				<string>com.googleusercontent.apps.20527970609-rjcg7867e3juc6ocgrau9u9ce54qgnf3</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>twitterkit-zadf8K2CBoBklDwGgyQFdngZ5</string>
+			</array>
+		</dict>
+	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>twitter</string>
+		<string>twitterauth</string>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
