--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "^3.5.0",
     "react-native-segmented-control-tab": "^3.4.1",
     "react-native-svg": "^12.1.1",
+    "react-native-twitter-signin": "^1.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.4",
     "realm": "^10.6.1",
