--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/stack": "^6.0.7",
     "react": "17.0.2",
     "react-native": "0.65.0",
+    "react-native-fbsdk-next": "^4.6.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-safe-area-context": "^3.3.0",
